2003-06-23  Stephane Carrez  <stcarrez@nerim.fr>

	* m68hc11-tdep.c (m68hc11_gdbarch_init): Clear gdb_arch_char_signed
	as characters are unsigned.

2003-06-22  Daniel Jacobowitz  <drow@mvista.com>

	PR gdb/1179
	* dwarfread.c (struct_type): Skip static fields without crashing.

2003-06-22  Andrew Cagney  <cagney@redhat.com>

	GDB 6.0 branch created.
	* version.in: Bump to version 5.3.90_0000-00-00-cvs.
	* PROBLEMS: Update.  Empty.
	* README: Update.
	* NEWS: Update.

2003-06-22  Daniel Jacobowitz  <drow@mvista.com>

	* symfile.c (add_symbol_file_command): Use parse_and_eval_address.
	Suggested by Nick Hibma <n_hibma@webweaving.org>.

2003-06-22  Andrew Cagney  <cagney@redhat.com>

	* osabi.c (generic_elf_osabi_sniff_abi_tag_sections): Handle
	GNU_ABI_TAG_FREEBSD and GNU_ABI_TAG_NETBSD.  Suggested by Momchil
	Velikov.

2003-06-22  Daniel Jacobowitz  <drow@mvista.com>

	* cli/cli-cmds.c (shell_escape): Silence warnings from old
	compilers.

2003-06-21  Daniel Jacobowitz  <drow@mvista.com>

	* c-valprint.c (c_value_print): Add VALUE_OFFSET to the address
	argument of val_print.
	* cp-valprint.c (cp_print_value): Don't add the offset parameter
	to the address argument of baseclass_offset or target_read_memory.
	Do add it to the argument of cp_print_value_fields.

2003-06-21  Andrew Cagney  <cagney@redhat.com>

	* mips-tdep.c: Include "reggroups.h" and "sim-regno.h".
	(mips_register_name): Return names for NUM_REGS..2*NUM_REGS
	instead of 0..NUM_REGS.
	(mips_register_reggroup_p): New function.
	(mips_pseudo_register_write): New function.
	(mips_pseudo_register_read): New function.
	(mips_register_raw_size): For NUM_REGS..2*NUM_REGS return the size
	based on the register's type.
	(read_next_frame_reg): Simplify.  Assert that REGNO is a pseudo /
	cooked.
	(mips_get_saved_register): Simplify.  Assert that REGNO is a
	pseudo / cooked.
	(mips_register_byte): New function.  Use MIPS_REGISTER_BYTE.
	(mips_register_type): Replace mips_register_virtual_type.  Map